package src;
abstract class Pan extends Ingrediente {
    protected Pan(String nombre) {
        this.nombre = nombre;
    }  
}