@startuml

class Restaurante {
    - void atender()
    - static void main(String[] args)
}

class Cocinero {
    - Hamburguesa hamburguesa
    + void prepararHamburguesa()
    + Hamburguesa entregar()
}

class Camarero {
    - Hamburguesa hamburguesa
    + void recibir(Hamburguesa hamburguesa)
    + void servir()
}

class Hamburguesa {
    - Ingrediente ingredientes
    + Hamburguesa(String ingredientePrincipal)
    + void agregarIngrediente(String nombrePadre, String nombreIngrediente)
    + void quitarIngrediente(String nombreIngrediente)
    + void moverIngrediente(String nombreIngrediente, String nuevoPadre)
    + void imprimirIngredientes()
    - Ingrediente buscarIngrediente(String nombre, Ingrediente ingrediente)
    - void imprimirIngredientes(Ingrediente ingrediente, String prefijo)
}

class Ingrediente {
    - String nombre
    - Ingrediente primerHijo
    - Ingrediente siguienteHermano
    + Ingrediente(String nombre)
    + String describir()
    + void mostrar()
    + void agregarHijo(Ingrediente hijo)
    + void quitarHijo(String nombreHijo)
    + Ingrediente getPrimerHijo()
    + Ingrediente getSiguienteHermano()
    + void setSiguienteHermano(Ingrediente siguienteHermano)
}

class Empleado {
    + String nombre
    + void trabajar()
}

Empleado <|-- Cocinero
Empleado <|-- Camarero

Ingrediente <|-- Carne
Ingrediente <|-- Pan
Ingrediente <|-- Extras

class Pan {
    + String tipo
}

Pan <|-- Integral
Pan <|-- Brioche

Restaurante -> Cocinero : utiliza
Restaurante -> Camarero : utiliza
Cocinero -> Hamburguesa : prepara
Camarero -> Hamburguesa : recibe
Hamburguesa -> Ingrediente : contiene
Ingrediente -> Pan : contiene
Pan <|-- Integral
Pan <|-- Brioche

@enduml
